# CIA

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
cia/: analytics.py  claude_paths.py  cli.py  daemon.py  endpoints.py  hook_receiver.py  hooks.py  otlp_receiver.py  proxy.py  schema.py  socket_server.py  sse_parser.py  store.py  transcripts.py  watcher.py
docs/: architecture.md  development.md  event-schema.md  setup.md  socket-api.md
tests/integration/: fake_anthropic.py  test_daemon.py  test_hook_receiver.py
tests/unit/: test_analytics.py  test_claude_paths.py  test_cli_run.py  test_daemon_dynamic_watch.py  test_endpoints.py  test_otlp_receiver.py  test_proxy_addon.py  test_schema.py  test_schema_tool_target.py  test_sse_parser.py  test_store.py  test_transcripts.py  test_watcher_delta.py
