[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cia-monitor"
version = "0.1.0"
description = "Claude Instrumentation & Analysis — local monitoring for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "aiosqlite>=0.19",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
cia = "cia.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "anyio[trio]>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["cia"]
